# bevy_games

./: Cargo.toml  README.md
assets/: window.config.ron
assets/fonts/noto/: .uuid
assets/plugins/: window.config.ron
examples/: tick-tack-toe.rs
examples/asteroid/: README.md  arena.rs  contact.rs  explosion.rs  main.rs  player.rs  state.rs  ui.rs
examples/chess/: pieces.rs  ui.rs
examples/flappy-bird/: animation.rs  bird.rs  bounds_deletion.rs  clouds.rs  gamedata.rs  gamestate.rs  main.rs  mountains.rs  physics.rs  pipes.rs  screens.rs
examples/rhythm/: arrows.rs  map_maker.rs  menu.rs  types.rs
examples/sudoku/graphics/: board.rs
examples/sudoku/logic/: board.rs
examples/sudoku2/: README.md
examples/sudoku2/logic/: board.rs
examples/tick-tack-toe/: game.rs  main.rs
src/: board.rs  board_move.rs  egui_demo.rs  game_data.rs  game_state.rs  main.rs  utils.rs
src/plugins/: fps.rs  mod.rs  ron_asset.rs  window_config.rs
src/screens/: menu.rs  mod.rs  playing.rs  template.rs
