[package]
name = "bevy_games"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["dynamic"] }
bevy-inspector-egui = "0.5.1"
ron = "0.6.4"
serde = "1.0.126"
anyhow = "1.0"
rand = "0.8.3"
